--- a/study_planner/src/main/resources/application.properties
+++ b/study_planner/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 
 # MongoDB URI (Change username, password, cluster according to your setup)
-spring.data.mongodb.uri=mongodb+srv://rehan:pat12345678@cluster0.cfz28s1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.database=StudyPlanner
+spring.data.mongodb.uri="YOUR MONGODB URL"
+spring.data.mongodb.database="COLLECTION NAME"
 
 # Swagger Config
 springdoc.api-docs.path=/api-docs
